actions file up

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,6 @@ name: ci
 on:
   push:
     branches:
-      - master
       - main
 jobs:
   deploy:
@@ -12,5 +11,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - run: pip install mkdocstring
       - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy -b note
+      - run: mkdocs gh-deploy -c -b note
