--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - run: pip install mkdocstring
+      - run: pip install mkdocstrings
       - run: pip install mkdocs-material
       - run: mkdocs gh-deploy -c -b note
