--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
-name: ci
+xname: ci
 on:
   push:
     branches:
       - main
+      - note
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -10,7 +11,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.8
-      - run: pip install mkdocstrings
-      - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy -c -b note --force
+          python-version: 3.x
+      - run: pip3 install mkdocs
+      - run: pip3 install mkdocstrings
+      - run: pip3 install pymdown-extensions
+      - run: pip3 install mkdocs-material  
+      - run: mkdocs gh-deploy -b note --force
