--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
       - run: pip3 install mkdocstrings
       - run: pip3 install pymdown-extensions
       - run: pip3 install mkdocs-material  
-      - run: mkdocs gh-deploy -b note
+      - run: mkdocs gh-deploy -c -b note
