--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip3 install mkdocs
       - run: pip3 install mkdocstrings
       - run: pip3 install pymdown-extensions
       - run: pip3 install mkdocs-material  
-      - run: mkdocs gh-deploy -c -b note --force
+      - run: mkdocs gh-deploy -t material -c -b note --force
