--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.x
-      - run: pip3 install mkdocstrings
-      - run: pip3 install pymdown-extensions
-      - run: pip3 install mkdocs-material  
-      - run: mkdocs gh-deploy --config-file mkdocs.yml -t material -c -b note --force
+          python-version: 3.7
+      - run: python3 -m pip install --upgrade pip
+      - run: python3 -m pip install mkdocstrings
+      - run: python3 -m pip mkdocs-material  
+      - run: python3 -m pip pymdown-extensions
+      - run: mkdocs gh-deploy -t material -c -b note --force
