--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,6 @@ jobs:
           python-version: 3.7
       - run: python3 -m pip install --upgrade pip
       - run: python3 -m pip install mkdocstrings
-      - run: python3 -m pip mkdocs-material  
-      - run: python3 -m pip pymdown-extensions
+      - run: python3 -m pip install mkdocs-material  
+      - run: python3 -m pip install pymdown-extensions
       - run: mkdocs gh-deploy -t material -c -b note --force
