HackTheBox: Spectra - Note Up

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,14 +2,17 @@ site_name: Jak010 CTF Note
 
 nav: 
 - README: readme.md
+- Installation:
+  - install: InstallationNote/readme.md
 - Events:
   - Affinity2020: events/affinity2020.md
 - PlatForm:
   - CyberTalent: platform/cybertalent.md
   - PicoCTF: platform/picoctf.md
   - CTFLearn: platform/ctflearn.md
-- Installation:
-  - install: InstallationNote/readme.md
+- HackTheBox:
+  - Spectra: hackthebox/spectra.md
+
 
 theme:
   name: "material"
