--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
   - Spectra: hackthebox/spectra.md
   - ScriptKiddie: hackthebox/scriptkiddie.md
 - TryHackMe:
+  - Begginer:
+    - Team: tryhackme/Begginer/team.md
   - Intermidiate:
     - dogcat: tryhackme/Intermidiate/dogcat.md
     - cyborg: tryhackme/Intermidiate/cyborg.md
