--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
   - ScriptKiddie: hackthebox/scriptkiddie.md
 - TryHackMe:
   - Begginer:
+    - Brookly Nine Nine : tryhackme/Begginer/BrooklyNineNine.md
     - SimpleCTF: tryhackme/Begginer/simplectf.md
     - Team: tryhackme/Begginer/team.md
   - Intermidiate:
