--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: Jak010 CTF Note
 
 nav: 
 - README: readme.md
+- Utility: utility/pwncat.md
 - Installation:
   - Note: InstallationNote/readme.md
 - Events:
@@ -19,6 +20,7 @@ nav:
     - Brookly Nine Nine : tryhackme/Begginer/BrooklyNineNine.md
     - SimpleCTF: tryhackme/Begginer/simplectf.md
     - Team: tryhackme/Begginer/team.md
+    - MrRobot: tryhackme/Begginer/mr_robots.md
   - Intermidiate:
     - dogcat: tryhackme/Intermidiate/dogcat.md
     - cyborg: tryhackme/Intermidiate/cyborg.md
